[package]
name = "message-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.10", features = ["ws"]}
futures = "0.3"
tokio = {version = "1", features = ["full"]}
tower = {version = "0.4", features = ["util"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-channel = "1.8.0"
serde = {version = "1.0.154", features = ["derive"]}
serde_json = "1.0.94"
rand = "0.8.5"
crossbeam-skiplist = "0.1.1"